vertical-align title correction

--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body{
 }
 
 .logotext{
-    width: 100%;
     height: 100px;
     padding: 2px;
     background-color: white;
@@ -18,15 +17,17 @@ body{
 }
 #logo{
     margin-left: 20px;
-    margin-top: 20px;
+    margin-top: 10px;
     height: 70px;
+    vertical-align:middle;
 }
 
 #logo-name{
     display: inline-block;
     margin-left: 10px;
-    padding-bottom: 30px;
+    margin-top: 15px;
     font-size: 60px;
+    vertical-align: middle;
 }
 #conteiner{
     width: 70%;
@@ -34,6 +35,7 @@ body{
     background-color: white;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+    
 }
 nav{
     width: 100%;
